ADD: ZEIndexBuffer Added. ADD: Drawing with index buffer capability added to ZED3D9FrameRenderer. IMP: ZED3D9MLAAProcessor now cleans all render targets at once. ADD: Index buffer creation functions are added to ZEGraphics module. ADD: Planar cloud system implemented and following structures added: ZECloud, ZECloudMaterial, ZED3D9CloudMaterial, ZECloudMaterial.hlsl added CHG: For the rest of the files in this commit visual appearance(Coding style, Notation) is fixed.
svn path=/trunk/; revision=792

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -39,6 +39,8 @@ ze_add_source(ZECanvasBrush.cpp			Sources)
 ze_add_source(ZECanvasBrush.h			Sources Header ZEPP)
 ze_add_source(ZECharacter.cpp			Sources)
 ze_add_source(ZECharacter.h				Sources Header ZEPP)
+ze_add_source(ZECloud.cpp				Sources)
+ze_add_source(ZECloud.h					Sources Header)
 ze_add_source(ZEComponent.cpp			Sources)
 ze_add_source(ZEComponent.h				Sources Header ZEPP)
 ze_add_source(ZECompoundEntity.cpp		Sources)
