--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -45,6 +45,8 @@ ze_add_source(ZECamera.cpp							Sources)
 ze_add_source(ZECamera.h							Sources Header ZEPP)
 ze_add_source(ZECanvas.cpp							Sources)
 ze_add_source(ZECanvas.h 							Sources Headers)
+ze_add_source(ZECloudMaterial.cpp					Sources)
+ze_add_source(ZECloudMaterial.h 					Sources Headers)
 ze_add_source(ZEDirectionalLight.cpp	 			Sources)
 ze_add_source(ZEDirectionalLight.h					Sources Header ZEPP)
 ze_add_source(ZEFixedMaterial.cpp 					Sources)
@@ -55,6 +57,8 @@ ze_add_source(ZEGraphicsDebugModule.cpp				Sources)
 ze_add_source(ZEGraphicsDebugModule.h				Sources)
 ze_add_source(ZEGraphicsModule.cpp 					Sources)
 ze_add_source(ZEGraphicsModule.h 					Sources Header)
+ze_add_source(ZEIndexBuffer.cpp 					Sources)
+ze_add_source(ZEIndexBuffer.h 						Sources Header)
 ze_add_source(ZEIndexedPolygon.h 					Sources Headers)
 ze_add_source(ZELight.cpp 							Sources)
 ze_add_source(ZELight.h 							Sources Header ZEPP)
