--- a/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -43,6 +43,8 @@ add_subdirectory (ZED3D9PostProcessor)
 
 ze_add_source(ZED3D9BlurProcessor.cpp			Sources)
 ze_add_source(ZED3D9BlurProcessor.h				Sources)
+ze_add_source(ZED3D9CloudMaterial.cpp			Sources)
+ze_add_source(ZED3D9CloudMaterial.h				Sources)
 ze_add_source(ZED3D9ColorTransformProcessor.cpp	Sources)
 ze_add_source(ZED3D9ColorTransformProcessor.h	Sources)
 ze_add_source(ZED3D9CommonTools.cpp				Sources)
@@ -61,6 +63,8 @@ ze_add_source(ZED3D9FrameRenderer.cpp			Sources)
 ze_add_source(ZED3D9FrameRenderer.h				Sources)
 ze_add_source(ZED3D9HDRProcessor.cpp			Sources)
 ze_add_source(ZED3D9HDRProcessor.h				Sources ZEPP)
+ze_add_source(ZED3D9IndexBuffer.cpp				Sources)
+ze_add_source(ZED3D9IndexBuffer.h				Sources)
 ze_add_source(ZED3D9MLAAProcessorAreaImage.cpp	Sources)
 ze_add_source(ZED3D9MLAAProcessor.cpp			Sources)
 ze_add_source(ZED3D9MLAAProcessor.h				Sources)
