IMP: ZESceneCuller revised and has become functional. ADD: ZEUISceneStatisticsControl UI control added for scene culling and general statistics. MOD: ZEViewVolume is dissolved into separate files and relocated to ZEMath library. Consequently, changes are made on structures that use ZEViewVolume.cpp REM: Old ZEViewVolume.h and ZEViewVolume.cpp is removed.
svn path=/trunk/; revision=802

--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -84,6 +84,16 @@ ze_add_source(ZEVector3Tests.cpp		Tests)
 ze_add_source(ZEVector4Tests.cpp		Tests)
 ze_add_source(ZEPolygon.h				Sources Headers)
 ze_add_source(ZEPolygon.cpp				Sources)
+ze_add_source(ZEViewVolume.h			Sources Headers)
+ze_add_source(ZEViewVolume.cpp			Sources)
+ze_add_source(ZEViewFrustum.h			Sources Headers)
+ze_add_source(ZEViewFrustum.cpp			Sources)
+ze_add_source(ZEViewSphere.h			Sources Headers)
+ze_add_source(ZEViewSphere.cpp			Sources)
+ze_add_source(ZEViewHemiSphere.h			Sources Headers)
+ze_add_source(ZEViewHemiSphere.cpp			Sources)
+ze_add_source(ZEViewCuboid.h			Sources Headers)
+ze_add_source(ZEViewCuboid.cpp			Sources)
 	
 ze_add_library(ZEMath 
 	SOURCES ${Sources} 
