--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -118,8 +118,8 @@ ze_add_source(ZEVertexTypes.cpp 					Sources)
 ze_add_source(ZEVertexTypes.h 						Sources Headers)
 ze_add_source(ZEViewPort.cpp 						Sources)
 ze_add_source(ZEViewPort.h 							Sources Headers)
-ze_add_source(ZEViewVolume.cpp 						Sources)
-ze_add_source(ZEViewVolume.h 						Sources Headers)
+#ze_add_source(ZEViewVolume.cpp 						Sources)
+#ze_add_source(ZEViewVolume.h 						Sources Headers)
 ze_add_source(ZETextureLoader.cpp					Sources)
 ze_add_source(ZETextureLoader.h						Sources Headers)
 ze_add_source(ZETextureTools.cpp					Sources)		
