--- a/Source/ZEEngine/ZEMap/ZEPortalMap/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMap/ZEPortalMap/CMakeLists.txt
@@ -45,6 +45,8 @@ ze_add_source(ZEPortalMapPortal.h			Sources Headers)
 ze_add_source(ZEPortalMapPortalDoor.h		Sources Headers)
 ze_add_source(ZEPortalMapResource.cpp		Sources)
 ze_add_source(ZEPortalMapResource.h			Sources Headers)
+#ze_add_source(ZEPortalMapCuller.cpp			Sources)
+#ze_add_source(ZEPortalMapCuller.h			Sources Headers)
 
 ze_add_library(ZEPortalMap 
 	SOURCES ${Sources}
