CHG: ZESkyDome now uses sun direction(instead of sun position) as all other systems do. IMP: Two different ambient color usage added to ZESkyDome. One is to add to low luminance pixels at daylight, and other is to add to high luminance pixels at sunset/sunrise. FIX: Necessary headers for compilation are included to ZEPrimitiveTester.h. IMP: Now ZECloud and ZESkyDome sets the initial member values to ZECloudMaterial and ZESkyDomeMaterial as soon as material is created. CHG: ZESkyBrush draw order changed in order to render ZESkyBrush with ZESkyDome and Clouds. CHG: ZECloudMaterial wind speed reduced to 0.005. FIX: Now a temp matrix is used to avoid same input-output limitation of matrix multiplication in function: ZED3D9CloudMaterial::UpdateShadowTransformations(). ADD: SetTexture(DWORD Stage, ZETexture3D* Texture, DWORD Filter, DWORD MipMappingFilter, DWORD Addressing) function added to ZED3D9CommonTools to allow volumetric textures to be able to used as samplers. CHG: HDR and MLAA activated, HDR options readjusted to fit with outdoor scenes, FarZ changed to 20000.0. FIX: ZEFileCache warnings fixed. FIX: Bug issued in RedMine is fixed: In function ZEPartialFile::Close(), the parent file pointer is checked for nullity before it is used. ADD: IsPowerOfTwo, NextPowerOfTwo, PreviousPowerOfTwo functions are reimplemented to ZEMath. FIX: Bug issued in RedMine is fixed: the w component of the input vector is taken into account in function ZEMatrix4x4::Transform().
svn path=/trunk/; revision=809

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -68,6 +68,8 @@ ze_add_source(ZEMaterialComponents.h				Sources Headers)
 ze_add_source(ZEMaterialFileFormat.h 				Sources)
 ze_add_source(ZEMaterialResource.cpp 				Sources)
 ze_add_source(ZEMaterialResource.h 					Sources Header)
+#ze_add_source(ZEMoonMaterial.cpp 					Sources)
+#ze_add_source(ZEMoonMaterial.h 						Sources Header)
 ze_add_source(ZEOmniProjectiveLight.cpp 			Sources)
 ze_add_source(ZEOmniProjectiveLight.h 				Sources Header ZEPP)
 ze_add_source(ZEPointLight.cpp 						Sources)
