--- a/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -70,6 +70,8 @@ ze_add_source(ZED3D9MLAAProcessor.cpp			Sources)
 ze_add_source(ZED3D9MLAAProcessor.h				Sources)
 ze_add_source(ZED3D9Module.cpp					Sources)
 ze_add_source(ZED3D9Module.h					Sources)
+#ze_add_source(ZED3D9MoonMaterial.cpp			Sources)
+#ze_add_source(ZED3D9MoonMaterial.h				Sources)
 ze_add_source(ZED3D9Profiler.cpp				Sources)
 ze_add_source(ZED3D9Profiler.h					Sources)
 ze_add_source(ZED3D9Shader.cpp					Sources)
