CHG: Temporary color texture support added to ZETerrain. TEMPORARY!!!
svn path=/trunk/; revision=812

--- a/Source/ZEToolSDK/CMakeLists.txt
+++ b/Source/ZEToolSDK/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory (ZETFontFile)
 add_subdirectory (ZETMapFile)
 add_subdirectory (ZETMaterialFile)
 add_subdirectory (ZETModelFile)
+#add_subdirectory (ZETTerrainFile)
 add_subdirectory (ZETCommon)
 
 ze_add_source(ZETCompileOptions.h	Sources)
