IMP: ZEStateMachine is revised and now in working condition. DEL: ZETransaction class is obsolete and removed. ADD: ZETimer and ZETimerManager classes added. MOD: Necessary changes made to ZECore for Timer mechanisms. FIX: ZEViewFrustum minor bug fixed.
svn path=/trunk/; revision=816

--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -90,6 +90,11 @@ ze_add_source(ZEWindow.h							Sources Headers)
 ze_add_source(ZEWindowResources.h					Sources)
 ze_add_source(ZEVersion.cpp							Sources)
 ze_add_source(ZEVersion.h							Sources Headers)
+ze_add_source(ZETimer.cpp							Sources)
+ze_add_source(ZETimer.h								Sources Headers)
+ze_add_source(ZETimerManager.cpp					Sources)
+ze_add_source(ZETimerManager.h						Sources Headers)
+
 
 
 ze_add_library(ZECore 
