--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -58,6 +58,8 @@ ze_add_source(ZEEndian.h 			Sources Headers)
 ze_add_source(ZEEndian.cpp 			Sources)
 ze_add_source(ZEError.h 			Sources Headers)
 ze_add_source(ZEError.cpp 			Sources)
+ze_add_source(ZEPacking.h 			Sources Headers)
+ze_add_source(ZEPacking.cpp 		Sources)
 ze_add_source(ZESerialPort.h 		Sources Headers)
 ze_add_source(ZESerialPort.cpp 		Sources)
 ze_add_source(ZERandom.h 			Sources Headers)
