ADD: ZEMoon added and it is fully functional. CHG: ZECloud now accepts a cloud texture from user, instead of using a hard coded one. CHG: ZETexture2D class Create function parameter order changed to fit other similar functions. All the references of the function in the engine is changed to new order. ADD: Volume texture support added. IMP: ZETextureData interface is rewritten and improved. All the texture systems now use the new ZETextureData. CHG: Now compression and MipMap functions also takes texture type parameter. IMP: Quality manager now supports ZETexture3D processing. FIX: ZEMath some template function typo errors fixed. ADD: Circular function added to ZEMath.
svn path=/trunk/; revision=824

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -59,8 +59,8 @@ ze_add_source(ZEGrid.cpp				Sources)
 ze_add_source(ZEGrid.h					Sources	Header ZEPP)
 ze_add_source(ZEGizmo.cpp	    		Sources)
 ze_add_source(ZEGizmo.h					Sources	Header)
-#ze_add_source(ZEMoon.cpp	    		Sources)
-#ze_add_source(ZEMoon.h					Sources	Header)
+ze_add_source(ZEMoon.cpp	    		Sources)
+ze_add_source(ZEMoon.h					Sources	Header)
 ze_add_source(ZEPlayer.cpp				Sources)
 ze_add_source(ZEPlayer.h				Sources Header ZEPP)
 ze_add_source(ZEPortal.cpp				Sources)
