--- a/Installation/CMakeLists.txt
+++ b/Installation/CMakeLists.txt
@@ -72,7 +72,7 @@ if (ZEBUILD_BUILD_INSTALLER)
 
 	set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/Installation/License.txt")
 	set(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/Installation/Welcome.txt")
-	set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/Installation/Readme.txt")
+	set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/Installation/ReadMe.txt")
 
 	set(CPACK_COMPONENTS_ALL_GROUPS_IN_ONE_PACKAGE 1)
 
