CHG: Old modules DirectInput, VirtualInput and DummyInputs made non-default modules. FIX: Some new entity system integration bugs fixed.
svn path=/trunk/; revision=846

--- a/Source/ZEModules/CMakeLists.txt
+++ b/Source/ZEModules/CMakeLists.txt
@@ -38,9 +38,9 @@ cmake_minimum_required (VERSION 2.8)
 ze_set_project_folder("ZEModules")
 
 ze_add_module(ZEDirect3D9			PLATFORM Windows)
-ze_add_module(ZEDirectInput			OPTIONAL DEFAULT PLATFORMS Windows )
-ze_add_module(ZEDummyInput			OPTIONAL DEFAULT)
-ze_add_module(ZEVirtualInput		OPTIONAL DEFAULT)
+ze_add_module(ZEDirectInput			OPTIONAL PLATFORMS Windows )
+ze_add_module(ZEDummyInput			OPTIONAL)
+ze_add_module(ZEVirtualInput		OPTIONAL)
 ze_add_module(ZEWindowsInput		OPTIONAL DEFAULT PLATFORMS Windows)
 ze_add_module(ZEFreespaceInput		OPTIONAL 		 PLATFORMS Windows)
 ze_add_module(ZEVRPNInput			OPTIONAL DEFAULT PLATFORMS Windows Linux MacOSX BSD)
