FIX: CMake x64 platform problems fixed FIX: Minor 64 bit compatability warnings fixed. ADD: ZEWeather system implemented and entergrated to ZESimulationModule. Fix: ZEConsoleWindow typo error fixed. CHG: Some ZECloud parameters are not set to material in every frame. This lets some parameters only handled by the material.
svn path=/trunk/; revision=856

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -11,10 +11,10 @@ ZEPhysicsModule = ZEPhysXModule
 ZEGameModule = ZETestGame
 
 [Graphics]
-ScreenWidth = 1920
-ScreenHeight = 1080
+ScreenWidth = 1280
+ScreenHeight = 720
 Fullscreen = false
-VerticalSync = true
+VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
 AnisotropicFilterLevel = 8
