--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,11 @@ if (${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_32" OR
 	${CMAKE_SYSTEM_PROCESSOR} MATCHES "i486" OR
 	${CMAKE_SYSTEM_PROCESSOR} MATCHES "i586" OR
 	${CMAKE_SYSTEM_PROCESSOR} MATCHES "i686")
-	set(ZEBUILD_PLATFORM_ARCHITECTURE "x86")
+	if (${ZEBUILD_PLATFORM_WORD_SIZE} MATCHES "32")
+		set(ZEBUILD_PLATFORM_ARCHITECTURE "x86")
+	else()
+		set(ZEBUILD_PLATFORM_ARCHITECTURE "x64")
+	endif()
 elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
 	set(ZEBUILD_PLATFORM_ARCHITECTURE "x64")
 else()
