FIX: Major and minor bug fixes on ZESimulation demo application. CHG: Some of the ZEQuaternion warnings disabled. IMP: ZEWeather sky dome parameters visually improved. FIX: Angular acceleration bug in ZEPlayerFreeSteering has been fixed. CHG: ZETerrain::GetHeight function now returns the height of second terrain level. CHG: ZEActor reverted to old revisions and applied bug fixes.
svn path=/trunk/; revision=866

--- a/Source/ZEFoundation/ZETest/CMakeLists.txt
+++ b/Source/ZEFoundation/ZETest/CMakeLists.txt
@@ -35,8 +35,7 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-project(Test)
-ze_set_project_folder("ZETest")
+project(ZETest)
 
 ze_add_source(ZETestMain.cpp		Source)
 ze_add_source(ZETest.cpp			Source)
