IMP: Visual improvements and fine tuning on Simulation demo application. FIX: ze_add_cmake_project bugs fixed. FIX: ZE3dsMax new cmake functions migration bugs fixed. FIX: ZESteering::Enabled initialization bug, which caused problems on release configuration builds, has been fixed.
svn path=/trunk/; revision=869

--- a/Source/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
+++ b/Source/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
@@ -49,14 +49,14 @@ ze_add_source(ZE3dsMapExporterResources.h		Sources)
 ze_add_source(ZE3dsMapExporter.def				Sources)
 #ze_add_source(../ZE3dsProgressDialog/ZE3dsProgressDialogResources.rc	Sources)
 
-ze_add_executable(ZE3dsMapExporter 
+ze_add_library(ZE3dsMapExporter 
 	SOURCES ${Sources}
 	LIBS ZEFoundation ZEToolAPI ZE3dsProgressDialog
 		core geom gfx mesh maxutil maxscrpt paramblk2 igame
 	INSTALL
 	INSTALL_DESTINATION "Tools/Exporters/ZE3dsMax"
 	INSTALL_COMPONENT Tools
-	PLUGIN)
+	DLL)
 	
 set_property(TARGET ZE3dsMapExporter PROPERTY FOLDER "ZE3dsMax")
 set_property(TARGET ZE3dsMapExporter PROPERTY SUFFIX ".dle")
