--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -48,18 +48,25 @@ ze_add_source(ZETextureCubeResource.h			Sources Headers)
 ze_add_source(ZETextureCacheDataIdentifier.cpp	Sources)
 ze_add_source(ZETextureCacheDataIdentifier.h	Sources Headers)
 ze_add_source(ZETextureData.cpp					Sources)
-ze_add_source(ZETextureData.h					Sources Headers)
-ze_add_source(ZETextureFile.cpp					Sources)
-ze_add_source(ZETextureFile.h					Sources Headers)
+ze_add_source(ZETextureData.h				    Sources Headers)
+ze_add_source(ZETextureFile.cpp			  		Sources)
+ze_add_source(ZETextureFile.h				    Sources Headers)
 ze_add_source(ZETextureFileBMP.cpp				Sources)
-ze_add_source(ZETextureFileBMP.h				Sources Headers)
+ze_add_source(ZETextureFileBMP.h			  	Sources Headers)
+ze_add_source(ZETextureFileBMPTest.cpp			Tests)
 ze_add_source(ZETextureFileFormat.cpp			Sources)
+ze_add_source(ZETexturePixelConverter.h			Sources Headers)
+ze_add_source(ZETexturePixelConverter.cpp		Sources)
 ze_add_source(ZETextureFileFormat.h				Sources Headers)
 ze_add_source(ZETextureFileJPEG.cpp				Sources)
-ze_add_source(ZETextureFileJPEG.h				Sources Headers)
+ze_add_source(ZETextureFileJPEG.h			  	Sources Headers)
 ze_add_source(ZETextureFileTGA.cpp				Sources)
-ze_add_source(ZETextureFileTGA.h				Sources Headers)
-ze_add_source(ZETextureLoader.cpp				Sources)
+ze_add_source(ZETextureFileTGA.h			  	Sources Headers)
+#ze_add_source(ZETextureFileTGATest.cpp			Tests)
+ze_add_source(ZETextureFileTIFF.cpp				Sources)
+ze_add_source(ZETextureFileTIFF.h			  	Sources Headers)
+#ze_add_source(ZETextureFileTGATest.cpp			Tests)
+ze_add_source(ZETextureLoader.cpp			  	Sources)
 ze_add_source(ZETextureLoader.h					Sources Headers)
 ze_add_source(ZETextureOptions.cpp				Sources)
 ze_add_source(ZETextureOptions.h				Sources Headers)
@@ -68,7 +75,6 @@ ze_add_source(ZETextureQualityManager.h			Sources Headers)
 ze_add_source(ZETextureTools.cpp				Sources)
 ze_add_source(ZETextureTools.h					Sources Headers)
 
-ze_add_source(ZETextureFileBMPTest.h			Tests)
 
 ze_add_library(ZETexture 
 	SOURCES ${Sources}
