CHG : Fog processors default fog type changed. ADD : TgsEnum.h, TgsAgPaketleri.h, ZENetworkedSimulationModule.h and ZENetworkedSimulationModule.cpp added to SimulationDemo application.
svn path=/trunk/; revision=874

--- a/Source/ZEEngine/ZENetwork/CMakeLists.txt
+++ b/Source/ZEEngine/ZENetwork/CMakeLists.txt
@@ -35,3 +35,29 @@
 
 cmake_minimum_required(VERSION 2.8)
 
+ze_add_source(ZENetworkModule.cpp					Sources)
+ze_add_source(ZENetworkModule.h						Sources Headers)
+ze_add_source(ZEUDPClient.cpp						Sources)
+ze_add_source(ZEUDPClient.h							Sources Headers)
+ze_add_source(ZEUDPServer.cpp						Sources)
+ze_add_source(ZEUDPServer.h							Sources Headers)
+ze_add_source(ZESocket.h							Sources Headers)
+ze_add_source(ZESocketWinSock.cpp					Sources)
+ze_add_source(ZESocketWinSockTests.cpp				Tests)
+ze_add_source(ZESocketBSDSock.cpp					Sources)
+ze_add_source(ZEIPAddress.h							Sources Headers)
+ze_add_source(ZEIPAddressWin.cpp					Sources)
+ze_add_source(ZEIPAddressWinTests.cpp				Tests)
+ze_add_source(ZEIPAddressBSD.cpp					Sources)
+
+ze_add_library(ZENetwork 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	LIBS ws2_32 ZEFoundation
+	INSTALL
+	INSTALL_DESTINATION "ZEEngineAPI/ZENetwork"
+	INSTALL_COMPONENT Header)
+	
+	ze_add_test(ZENetworkTests
+	SOURCES ${Tests}
+	TEST_TARGET ZENetwork)
