--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -62,10 +62,10 @@ ze_add_source(ZETextureFileJPEG.cpp				Sources)
 ze_add_source(ZETextureFileJPEG.h			  	Sources Headers)
 ze_add_source(ZETextureFileTGA.cpp				Sources)
 ze_add_source(ZETextureFileTGA.h			  	Sources Headers)
-#ze_add_source(ZETextureFileTGATest.cpp			Tests)
+ze_add_source(ZETextureFileTGATest.cpp			Tests)
 ze_add_source(ZETextureFileTIFF.cpp				Sources)
 ze_add_source(ZETextureFileTIFF.h			  	Sources Headers)
-#ze_add_source(ZETextureFileTGATest.cpp			Tests)
+ze_add_source(ZETextureFileTIFFTest.cpp			Tests)
 ze_add_source(ZETextureLoader.cpp			  	Sources)
 ze_add_source(ZETextureLoader.h					Sources Headers)
 ze_add_source(ZETextureOptions.cpp				Sources)
@@ -74,6 +74,8 @@ ze_add_source(ZETextureQualityManager.cpp		Sources)
 ze_add_source(ZETextureQualityManager.h			Sources Headers)
 ze_add_source(ZETextureTools.cpp				Sources)
 ze_add_source(ZETextureTools.h					Sources Headers)
+ze_add_source(ZEDecompressorLZW.cpp				Sources)
+ze_add_source(ZEDecompressorLZW.h				Sources Headers)
 
 
 ze_add_library(ZETexture 
