REM: Backhoe application has been removed. REM: Moon application has been removed. REM: ArtilerySimulation application has been removed. REM: AIIntegration application has been removed. REM: AIPrototype application module has been removed. CHG: SimulationDemo has been renamed to TGS. CHG: SimulationDemo has been reverted to original SimulationDemo. CHG: Steering renamed to ZESteeringXXXXX which XXXXX is steering name. Exmp: ZEAlingSteering renamed to ZESteeringAling. CHG: ZESteering.h divided in to separate steering files. CHG: ZESteeringArrive algorithm has been changed. Reference algorithm from character steering paper has been implemented. FIX: ZESteeringSeparate (ZESteeringSeperate) typo has been fixed. IMP: ZEActor and ZESteering angular velocity mechnisms moved from 2D euler angles to 3D quaternions. ADD: ZEQuaternion::ConvertToAngleAxis function added. CHG: ZEQuaternion::Create(float Angle, const ZEVector3& Axis) function renamed to ZEQuaternion::CreateFromAngleAxis. ADD: ZEMath::IsValid function added. This function checks wheater a float value is valid or not. CHG: Most of the ZEQuaternion assert checks has been re-anabled. FIX: ZETest directory refactoring bugs fixed.
svn path=/trunk/; revision=889

--- a/Source/ZEEngine/ZEAI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAI/CMakeLists.txt
@@ -37,20 +37,47 @@ cmake_minimum_required(VERSION 2.8)
 
 project(ZEAI)
 
-ze_add_source(ZEActor.h							Sources)
+ze_add_source(ZEActor.h							Sources Headers)
 ze_add_source(ZEActor.cpp						Sources)
-ze_add_source(ZESteering.h						Sources)
+ze_add_source(ZESteering.h						Sources Headers)
 ze_add_source(ZESteering.cpp					Sources)
-ze_add_source(ZEAStar.h							Sources)
+ze_add_source(ZESteeringAlign.h		            Sources Headers)
+ze_add_source(ZESteeringAlign.cpp		        Sources)
+ze_add_source(ZESteeringArrive.h	        	Sources Headers)
+ze_add_source(ZESteeringArrive.cpp		        Sources)
+ze_add_source(ZESteeringCollisionAvoidance.h	Sources Headers)
+ze_add_source(ZESteeringCollisionAvoidance.cpp	Sources)
+ze_add_source(ZESteeringFace.h	        	    Sources Headers)
+ze_add_source(ZESteeringFace.cpp	        	Sources)
+ze_add_source(ZESteeringFaceVelocity.h	        Sources Headers)
+ze_add_source(ZESteeringFaceVelocity.cpp	    Sources)
+ze_add_source(ZESteeringFlee.h	        	    Sources Headers)
+ze_add_source(ZESteeringFlee.cpp	        	Sources)
+ze_add_source(ZESteeringPathFollowing.h	        Sources Headers)
+ze_add_source(ZESteeringPathFollowing.cpp	    Sources)
+ze_add_source(ZESteeringSeek.h	        	    Sources Headers)
+ze_add_source(ZESteeringSeek.cpp	        	Sources)
+ze_add_source(ZESteeringSeparate.h	        	Sources Headers)
+ze_add_source(ZESteeringSeparate.cpp	        Sources)
+ze_add_source(ZESteeringStopper.h	        	Sources Headers)
+ze_add_source(ZESteeringStopper.cpp	        	Sources)
+ze_add_source(ZESteeringUserTankControl.h	    Sources Headers)
+ze_add_source(ZESteeringUserTankControl.cpp	    Sources)
+ze_add_source(ZESteeringVelocityMatching.h	    Sources Headers)
+ze_add_source(ZESteeringVelocityMatching.cpp	Sources)
+ze_add_source(ZESteeringWander.h	        	Sources Headers)
+ze_add_source(ZESteeringWander.cpp	        	Sources)
+ze_add_source(ZEAStar.h							Sources Headers)
 ze_add_source(ZEAStar.cpp						Sources)
 ze_add_source(ZEAStarTests.cpp					Tests)
-ze_add_source(ZENavigationMesh.h				Sources)
+ze_add_source(ZENavigationMesh.h				Sources Headers)
 ze_add_source(ZENavigationMesh.cpp				Sources)
-ze_add_source(ZENavigationMeshGenerator.h		Sources)
+ze_add_source(ZENavigationMeshGenerator.h		Sources Headers)
 ze_add_source(ZENavigationMeshGenerator.cpp		Sources)
 
 ze_add_library(ZEAI
 	SOURCES ${Sources} 
+	HEADERS ${Headers}
 	LIBS ZEFoundation)
 	
 ze_add_test(ZEAITests 
