FIX: Fixed minor problems in ZETextureFileBMP. It's RLE decompresser has been rewritten. IMP: ZETextureFileBMP tests has been revised and completed. FIX: Fixed minor problems in ZETextureFileTGA. It's RLE decompresser has been rewritten. IMP: ZETextureFileTGA tests has been revised and completed. ADD: ZEThread API has been added to ZEFoundation. ADD: ZETextureFile::LoadInfo function has been added and implemented in ZETextureFileBMP, ZETExtureFileTGA and ZETextureFileTIFF. REM: ZETExtureFile::CanLoad function has been removed in favor of ZETextureFile::LoadInfo. ADD: ZEEndian::GetEndianness function, which is used for getting system endianness at runtime, has been added. ADD: Support for enabling and disabling debug asserts has been added. ADD: Support for suspending ZEError output has been added.
svn path=/trunk/; revision=902

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -52,6 +52,7 @@ add_subdirectory(ZEStateMachine)
 add_subdirectory(ZEFile)
 add_subdirectory(ZESpatial)
 add_subdirectory(ZETest)
+add_subdirectory(ZEThread)
 
 ze_add_source(ZETypes.h 			Sources Headers)
 ze_add_source(ZETypes.cpp 			Sources)
